changes made to branch support no validation, color for seller category, payment options. changes made to user settings

--- a/src/app/ProviderWall/ManageOrders/views/oz.providerwall.provider-view.tpl.html
+++ b/src/app/ProviderWall/ManageOrders/views/oz.providerwall.provider-view.tpl.html
@@ -13,7 +13,7 @@
         <center>
           <p style="font-size: 14px; font-weight:bold;">No seller account exists.</p>      
           <p style="font-size: 12px;">Please add atleast one seller and a branch (from top right corner menu list) to start using OrderZapp.</p>
-          <p style="font-size: 12px;" class="text-info"><em><strong>Note:</strong></em> Once you add a seller, Please contact OrderZapp support team to activate your OrderZapp seller account.</p>
+          <p style="font-size: 13px; font-weight:bold;" class="text-danger"><em><strong>Note:</strong></em> Once you add a seller, Please contact OrderZapp support team to activate your OrderZapp seller account.</p>
         </center>
       </div>
     </div>
@@ -26,7 +26,7 @@
         <center>
           <p style="font-size: 14px; font-weight:bold;">No branch exist for your seller account.</p>      
           <p style="font-size: 12px;">Please add atleast one branch for this seller to start using OrderZapp</p>
-          <p style="font-size: 12px;" class="text-info"><em><strong>Note:</strong></em> Please contact OrderZapp support team to activate your OrderZapp seller account.</p>
+          <p style="font-size: 13px; font-weight:bold;" class="text-danger"><em><strong>Note:</strong></em> Please contact OrderZapp support team to activate your OrderZapp seller account.</p>
         </center>
       </div>
     </div>
