--- a/src/app/user/views/oz.user.manage.settings.tpl.html
+++ b/src/app/user/views/oz.user.manage.settings.tpl.html
@@ -12,12 +12,12 @@
 
 					<div id="oz-signup-input-group" class="input-group">
 				  	<input type="text" name="username" class="form-control" ng-model="user_settings_data.username" placeholder="username" required>
-				  	<small style="color:red;" ng-show="((form.editUserSettingsForm.username.$dirty && form.editUserSettingsForm.username.$invalid) || (form.editUserSettingsForm.username.$invalid && form.editUserSettingsForm.submitted))">*Please enter username!</small>
+				  	<small style="color:red;" ng-show="((form.editUserSettingsForm.username.$dirty && form.editUserSettingsForm.username.$invalid) || (form.editUserSettingsForm.username.$invalid && form.editUserSettingsForm.submitted))">*Please enter username.</small>
 					</div>
 
 					<div id="oz-signup-input-group" class="input-group">
 				  	<input type="email" name="email" class="form-control" ng-model="user_settings_data.email" placeholder="email" required>
-				  	<small style="color:red;" ng-show="((form.editUserSettingsForm.email.$dirty && form.editUserSettingsForm.email.$invalid) || (form.editUserSettingsForm.email.$invalid && form.editUserSettingsForm.submitted))">*Please enter valid email!</small>
+				  	<small style="color:red;" ng-show="((form.editUserSettingsForm.email.$dirty && form.editUserSettingsForm.email.$invalid) || (form.editUserSettingsForm.email.$invalid && form.editUserSettingsForm.submitted))">*Please enter valid email.</small>
 				  </div>
 
 				  <div id="oz-signup-input-group" class="input-group">
@@ -26,37 +26,37 @@
 
 				  <div id="oz-signup-input-group" class="input-group">
 				  	<input type="text" name="addressline1" class="form-control" ng-model="user_settings_data.location.address1" placeholder="address line1" required>
-				  	<small style="color:red;" ng-show="((form.editUserSettingsForm.addressline1.$dirty && form.editUserSettingsForm.addressline1.$invalid) || (form.editUserSettingsForm.addressline1.$invalid && form.editUserSettingsForm.submitted))">*Please enter address line1!</small>
+				  	<small style="color:red;" ng-show="((form.editUserSettingsForm.addressline1.$dirty && form.editUserSettingsForm.addressline1.$invalid) || (form.editUserSettingsForm.addressline1.$invalid && form.editUserSettingsForm.submitted))">*Please enter address line1.</small>
 				  </div>
 
 				  <div id="oz-signup-input-group" class="input-group">
 				  	<input type="text" name="addressline2" class="form-control" ng-model="user_settings_data.location.address2" placeholder="address line2" required>
-				  	<small style="color:red;" ng-show="((form.editUserSettingsForm.addressline2.$dirty && form.editUserSettingsForm.addressline2.$invalid) || (form.editUserSettingsForm.addressline2.$invalid && form.editUserSettingsForm.submitted))">*Please enter address line2!</small>
+				  	<small style="color:red;" ng-show="((form.editUserSettingsForm.addressline2.$dirty && form.editUserSettingsForm.addressline2.$invalid) || (form.editUserSettingsForm.addressline2.$invalid && form.editUserSettingsForm.submitted))">*Please enter address line2.</small>
 				  </div>
 
 				  <div id="oz-signup-input-group" class="input-group">
 				  	<input type="text" name="area" class="form-control" ng-model="user_settings_data.location.area" placeholder="area" required>
-				  	<small style="color:red;" ng-show="((form.editUserSettingsForm.area.$dirty && form.editUserSettingsForm.area.$invalid) || (form.editUserSettingsForm.area.$invalid && form.editUserSettingsForm.submitted))">*Please enter area!</small>
+				  	<small style="color:red;" ng-show="((form.editUserSettingsForm.area.$dirty && form.editUserSettingsForm.area.$invalid) || (form.editUserSettingsForm.area.$invalid && form.editUserSettingsForm.submitted))">*Please enter area.</small>
 				  </div>
 
 				  <div id="oz-signup-input-group" class="input-group">
 				  	<input type="text" name="city" class="form-control" ng-model="user_settings_data.location.city" placeholder="city" required>
-				  	<small style="color:red;" ng-show="((form.editUserSettingsForm.city.$dirty && form.editUserSettingsForm.city.$invalid) || (form.editUserSettingsForm.city.$invalid && form.editUserSettingsForm.submitted))">*Please enter city!</small>
+				  	<small style="color:red;" ng-show="((form.editUserSettingsForm.city.$dirty && form.editUserSettingsForm.city.$invalid) || (form.editUserSettingsForm.city.$invalid && form.editUserSettingsForm.submitted))">*Please enter city.</small>
 				  </div>
 
 				  <div id="oz-signup-input-group" class="input-group">
 				  	<input type="text" name="country" class="form-control" ng-model="user_settings_data.location.country" placeholder="country" required>
-				  	<small style="color:red;" ng-show="((form.editUserSettingsForm.country.$dirty && form.editUserSettingsForm.country.$invalid) || (form.editUserSettingsForm.country.$invalid && form.editUserSettingsForm.submitted))">*Please enter country!</small>
+				  	<small style="color:red;" ng-show="((form.editUserSettingsForm.country.$dirty && form.editUserSettingsForm.country.$invalid) || (form.editUserSettingsForm.country.$invalid && form.editUserSettingsForm.submitted))">*Please enter country.</small>
 				  </div>
 
 				  <div id="oz-signup-input-group" class="input-group">
 				  	<input type="text" name="state" class="form-control" ng-model="user_settings_data.location.state" placeholder="state" required>
-				  	<small style="color:red;" ng-show="((form.editUserSettingsForm.state.$dirty && form.editUserSettingsForm.state.$invalid) || (form.editUserSettingsForm.state.$invalid && form.editUserSettingsForm.submitted))">*Please enter state!</small>
+				  	<small style="color:red;" ng-show="((form.editUserSettingsForm.state.$dirty && form.editUserSettingsForm.state.$invalid) || (form.editUserSettingsForm.state.$invalid && form.editUserSettingsForm.submitted))">*Please enter state.</small>
 				  </div>
 
 				  <div id="oz-signup-input-group" class="input-group">
 				  	<input type="text" name="zipcode" class="form-control" ng-model="user_settings_data.location.zipcode" placeholder="zipcode" required>
-				  	<small style="color:red;" ng-show="((form.editUserSettingsForm.zipcode.$dirty && form.editUserSettingsForm.zipcode.$invalid) || (form.editUserSettingsForm.zipcode.$invalid && form.editUserSettingsForm.submitted))">*Please enter zipcode!</small>
+				  	<small style="color:red;" ng-show="((form.editUserSettingsForm.zipcode.$dirty && form.editUserSettingsForm.zipcode.$invalid) || (form.editUserSettingsForm.zipcode.$invalid && form.editUserSettingsForm.submitted))">*Please enter zipcode.</small>
 				  </div>
 
 					<div id="oz-signup-input-group" class="input-group">
