--- a/src/app/ProviderWall/ManageDeliveryCharges/views/oz.deliverycharges.managearea.tpl.html
+++ b/src/app/ProviderWall/ManageDeliveryCharges/views/oz.deliverycharges.managearea.tpl.html
@@ -46,7 +46,7 @@
 	<div ng-show="AreaUnderZipcode.length > 0 && showAreaUnderZipcode" style="margin:0px;" class="row">
 		<div style="margin:10px auto;" class="col-md-12">
 			<form class="css-form" name="form.deliveryChargeForm" novalidate>
-				<p><small style="color:red;" ng-show="(deliveryChargeError && form.deliveryChargeForm.submitted)">*Please enter delivery charge in digits only!</small></p>
+				<p><small style="color:red;" ng-show="(deliveryChargeError && form.deliveryChargeForm.submitted)">*Please enter delivery charge in digits only.</small></p>
 				<table class="table table-striped table-condensed">
 					<thead>
 						<tr style="letter-spacing:1px; font-size:13px; font-weight:bold; text-transform:uppercase;">
