--- a/src/app/ProviderWall/ManagePickupAddress/views/oz.seller.pickupaddress.manage.tpl.html
+++ b/src/app/ProviderWall/ManagePickupAddress/views/oz.seller.pickupaddress.manage.tpl.html
@@ -23,30 +23,30 @@
             <tr>
               <td width="20%;">
                 <input type="text" name="addressline1" class="form-control" ng-model="pickup.address1" placeholder="address line1" autofocus required>
-                <small style="color:red;" ng-show="((form.addPickupAddress.addressline1.$dirty && form.addPickupAddress.addressline1.$invalid) || (form.addPickupAddress.addressline1.$invalid && form.addPickupAddress.submitted))">*Please enter address line 1!</small>
+                <small style="color:red;" ng-show="((form.addPickupAddress.addressline1.$dirty && form.addPickupAddress.addressline1.$invalid) || (form.addPickupAddress.addressline1.$invalid && form.addPickupAddress.submitted))">*Please enter address line 1.</small>
                 <br>
                 <input type="text" name="addressline2" class="form-control" ng-model="pickup.address2" placeholder="address line2" required>
-                <small style="color:red;" ng-show="((form.addPickupAddress.addressline2.$dirty && form.addPickupAddress.addressline2.$invalid) || (form.addPickupAddress.addressline2.$invalid && form.addPickupAddress.submitted))">*Please enter address line 2!</small>
+                <small style="color:red;" ng-show="((form.addPickupAddress.addressline2.$dirty && form.addPickupAddress.addressline2.$invalid) || (form.addPickupAddress.addressline2.$invalid && form.addPickupAddress.submitted))">*Please enter address line 2.</small>
               </td>
               <td width="15%;">
                 <input type="text" name="country" class="form-control" ng-model="pickup.country" placeholder="country" ng-pattern="/^[a-zA-Z]*$/" required>
-                <small style="color:red;" ng-show="((form.addPickupAddress.country.$dirty && form.addPickupAddress.country.$invalid) || (form.addPickupAddress.country.$invalid && form.addPickupAddress.submitted))">*Please enter country!</small>
+                <small style="color:red;" ng-show="((form.addPickupAddress.country.$dirty && form.addPickupAddress.country.$invalid) || (form.addPickupAddress.country.$invalid && form.addPickupAddress.submitted))">*Please enter country.</small>
               </td>
               <td width="15%;">
                 <input name="state" class="form-control" type="text" placeholder="state" ng-pattern="/^[a-zA-Z]*$/" required ng-model="pickup.state" typeahead="state for state in states | filter:$viewValue | limitTo:6" typeahead-on-select="getCityForState(pickup.state)" />
-                <small style="color:red;" ng-show="((form.addPickupAddress.state.$dirty && form.addPickupAddress.state.$invalid) || (form.addPickupAddress.state.$invalid && form.addPickupAddress.submitted))">*Please enter state!</small>
+                <small style="color:red;" ng-show="((form.addPickupAddress.state.$dirty && form.addPickupAddress.state.$invalid) || (form.addPickupAddress.state.$invalid && form.addPickupAddress.submitted))">*Please enter state.</small>
               </td>
               <td width="15%;">
                 <input name="city" class="form-control" type="text" placeholder="city" ng-pattern="/^[a-zA-Z]*$/" required ng-model="pickup.city" typeahead="city for city in cities | filter:$viewValue | limitTo:6" typeahead-on-select="getZipcodeForCity(pickup.city)" />
-                <small style="color:red;" ng-show="((form.addPickupAddress.city.$dirty && form.addPickupAddress.city.$invalid) || (form.addPickupAddress.city.$invalid && form.addPickupAddress.submitted))">*Please enter city!</small>
+                <small style="color:red;" ng-show="((form.addPickupAddress.city.$dirty && form.addPickupAddress.city.$invalid) || (form.addPickupAddress.city.$invalid && form.addPickupAddress.submitted))">*Please enter city.</small>
               </td>
               <td width="15%;">
                 <input name="zipcode" class="form-control" type="text" ng-pattern="/^[0-9]{6}$/" ng-model="pickup.zipcode" placeholder="zipcode" required typeahead="zipcode for zipcode in zipcodes | filter:$viewValue | limitTo:6" typeahead-on-select="getAreaForZipcode(pickup.zipcode)"/>
-                <small style="color:red;" ng-show="((form.addPickupAddress.zipcode.$dirty && form.addPickupAddress.zipcode.$invalid) || (form.addPickupAddress.zipcode.$invalid && form.addPickupAddress.submitted))">*Please enter zipcode and must be a 6 digit number only!</small>
+                <small style="color:red;" ng-show="((form.addPickupAddress.zipcode.$dirty && form.addPickupAddress.zipcode.$invalid) || (form.addPickupAddress.zipcode.$invalid && form.addPickupAddress.submitted))">*Please enter zipcode and must be a 6 digit number only.</small>
               </td>
               <td width="15%;">
                 <input type="text" name="area" class="form-control" placeholder="area" ng-pattern="/^[a-zA-Z]*$/" required ng-model="pickup.area"  typeahead="area for area in Areas | filter:$viewValue | limitTo:6">
-                <small style="color:red;" ng-show="((form.addPickupAddress.area.$dirty && form.addPickupAddress.area.$invalid) || (form.addPickupAddress.area.$invalid && form.addPickupAddress.submitted))">*Please enter area!</small>
+                <small style="color:red;" ng-show="((form.addPickupAddress.area.$dirty && form.addPickupAddress.area.$invalid) || (form.addPickupAddress.area.$invalid && form.addPickupAddress.submitted))">*Please enter area.</small>
               </td>              
               
               <td width="5%;">
@@ -85,35 +85,35 @@
     					<td ng-show="(CurrentAddressIndex !== $index)">{{address.address1 }},{{ address.address2}}</td>
               <td ng-show="(editAddress && (CurrentAddressIndex == $index))">
                 <input type="text" name="editaddressline1" class="form-control" ng-model="editpickup.address1" placeholder="address line1" autofocus required>
-                <small style="color:red;" ng-show="((form.editPickupAddress.editaddressline1.$dirty && form.editPickupAddress.editaddressline1.$invalid) || (form.editPickupAddress.editaddressline1.$invalid && form.editPickupAddress.submitted))">*Please enter address line 1!</small>
+                <small style="color:red;" ng-show="((form.editPickupAddress.editaddressline1.$dirty && form.editPickupAddress.editaddressline1.$invalid) || (form.editPickupAddress.editaddressline1.$invalid && form.editPickupAddress.submitted))">*Please enter address line 1.</small>
                 <br>
                 <input type="text" name="editaddressline2" class="form-control" ng-model="editpickup.address2" placeholder="address line2" required>
-                <small style="color:red;" ng-show="((form.editPickupAddress.editaddressline2.$dirty && form.editPickupAddress.editaddressline2.$invalid) || (form.editPickupAddress.editaddressline2.$invalid && form.editPickupAddress.submitted))">*Please enter address line 2!</small>
+                <small style="color:red;" ng-show="((form.editPickupAddress.editaddressline2.$dirty && form.editPickupAddress.editaddressline2.$invalid) || (form.editPickupAddress.editaddressline2.$invalid && form.editPickupAddress.submitted))">*Please enter address line 2.</small>
               </td>
     					<td ng-show="(CurrentAddressIndex !== $index)">{{address.area}}</td>
               <td ng-show="(editAddress && (CurrentAddressIndex == $index))">
                 <input type="text" name="editarea" class="form-control" ng-model="editpickup.area" placeholder="area" ng-pattern="/^[a-zA-Z]*$/" required>
-                <small style="color:red;" ng-show="((form.editPickupAddress.editarea.$dirty && form.editPickupAddress.editarea.$invalid) || (form.editPickupAddress.editarea.$invalid && form.editPickupAddress.submitted))">*Please enter area!</small>
+                <small style="color:red;" ng-show="((form.editPickupAddress.editarea.$dirty && form.editPickupAddress.editarea.$invalid) || (form.editPickupAddress.editarea.$invalid && form.editPickupAddress.submitted))">*Please enter area.</small>
               </td>
               <td ng-show="(CurrentAddressIndex !== $index)">{{address.city}}</td>
               <td ng-show="(editAddress && (CurrentAddressIndex == $index))">
                 <input type="text" name="editcity" class="form-control" ng-model="editpickup.city" placeholder="city" ng-pattern="/^[a-zA-Z]*$/" required>
-                <small style="color:red;" ng-show="((form.editPickupAddress.editcity.$dirty && form.editPickupAddress.editcity.$invalid) || (form.editPickupAddress.editcity.$invalid && form.editPickupAddress.submitted))">*Please enter city!</small>
+                <small style="color:red;" ng-show="((form.editPickupAddress.editcity.$dirty && form.editPickupAddress.editcity.$invalid) || (form.editPickupAddress.editcity.$invalid && form.editPickupAddress.submitted))">*Please enter city.</small>
               </td>
               <td ng-show="(CurrentAddressIndex !== $index)">{{address.state}}</td>
               <td ng-show="(editAddress && (CurrentAddressIndex == $index))">
                 <input type="text" name="editstate" class="form-control" ng-model="editpickup.state" placeholder="state" ng-pattern="/^[a-zA-Z]*$/" required>
-                <small style="color:red;" ng-show="((form.editPickupAddress.editstate.$dirty && form.editPickupAddress.editstate.$invalid) || (form.editPickupAddress.editstate.$invalid && form.editPickupAddress.submitted))">*Please enter state!</small>
+                <small style="color:red;" ng-show="((form.editPickupAddress.editstate.$dirty && form.editPickupAddress.editstate.$invalid) || (form.editPickupAddress.editstate.$invalid && form.editPickupAddress.submitted))">*Please enter state.</small>
               </td>
               <td ng-show="(CurrentAddressIndex !== $index)">{{address.country}}</td>
               <td ng-show="(editAddress && (CurrentAddressIndex == $index))">
                 <input type="text" name="editcountry" class="form-control" ng-model="editpickup.country" placeholder="country" ng-pattern="/^[a-zA-Z]*$/" required>
-                <small style="color:red;" ng-show="((form.editPickupAddress.editcountry.$dirty && form.editPickupAddress.editcountry.$invalid) || (form.editPickupAddress.editcountry.$invalid && form.editPickupAddress.submitted))">*Please enter country!</small>
+                <small style="color:red;" ng-show="((form.editPickupAddress.editcountry.$dirty && form.editPickupAddress.editcountry.$invalid) || (form.editPickupAddress.editcountry.$invalid && form.editPickupAddress.submitted))">*Please enter country.</small>
               </td>
               <td ng-show="(CurrentAddressIndex !== $index)">{{address.zipcode}}</td>
               <td ng-show="(editAddress && (CurrentAddressIndex == $index))">
                 <input type="text" name="editzipcode" class="form-control" ng-pattern="/^[0-9]{6}$/" ng-model="editpickup.zipcode" placeholder="zipcode" required>
-                <small style="color:red;" ng-show="((form.editPickupAddress.editzipcode.$dirty && form.editPickupAddress.editzipcode.$invalid) || (form.editPickupAddress.editzipcode.$invalid && form.editPickupAddress.submitted))">*Please enter zipcode and must be a 6 digit number only!</small>
+                <small style="color:red;" ng-show="((form.editPickupAddress.editzipcode.$dirty && form.editPickupAddress.editzipcode.$invalid) || (form.editPickupAddress.editzipcode.$invalid && form.editPickupAddress.submitted))">*Please enter zipcode and must be a 6 digit number only.</small>
               </td>
     					<td ng-show="(CurrentAddressIndex !== $index)">
   	  					<a href="" ng-click="enableEditAddress($index, address)"><i class="fa fa-pencil"></i></a>
