--- a/src/app/ProviderWall/ManageOrders/views/oz.productOrder.tpl.html
+++ b/src/app/ProviderWall/ManageOrders/views/oz.productOrder.tpl.html
@@ -67,7 +67,7 @@
           </div>  <!-- product table -->
         
     </div> <!-- ngrepeat outer box css-->
-       <hr class="myhr">
+       <hr class="myhr" style="border-color:#A89797">
 
 
 
