Accept order modal cancel button

--- a/src/app/ProviderWall/ManageOrders/views/oz.providerContent.orderbyBranch.tpl.html
+++ b/src/app/ProviderWall/ManageOrders/views/oz.providerContent.orderbyBranch.tpl.html
@@ -82,8 +82,8 @@
               </div>
             </div>
             </div>
-
-            <a class="btn btn-default margin-left450 "  ng-click="onDateSelected(delivery_date,deliveryOption,order.preferred_delivery_date)">Accept </a>
+            <a type="button" class="btn btn-default margin-left450" data-dismiss="modal"> <i class="glyphicon glyphicon-remove"></i>  &nbsp; Cancel</a>
+            <a class="btn btn-primary  "  ng-click="onDateSelected(delivery_date,deliveryOption,order.preferred_delivery_date)">Accept </a>
            </div>
           </div>
         </div>
