--- a/src/app/ProviderWall/ManageOrders/views/oz.providerContent.orderbyBranch.tpl.html
+++ b/src/app/ProviderWall/ManageOrders/views/oz.providerContent.orderbyBranch.tpl.html
@@ -9,12 +9,12 @@
           <div class="modal-content">
             <div class="modal-header">
               <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-              <h4 class="modal-title" id="myModalLabel">Why you are not able to complete order ?</h4>
+              <h4 class="modal-title" id="myModalLabel">Reason for Rejection</h4>
             </div>
             <div class="modal-body" style="height:200px;">
            <form  id="Edit" class="css-form"  name="form.orderReason"   >  
           
-              <p style="font-size:12px;" class="text-muted">** Please enter reason for your order cancellation / rejection. Field is reqired and must not exceed 160 characters!!</p>
+              <p style="font-size:12px;" class="text-muted">** Please enter reason for your order cancellation / rejection. Reqired field [max 160 characters]</p>
             
             <textarea  type="text" 
                   ng-maxlength="160" name="reason" id="prodo-product-featuresDescription_textfield" class="form-control prodo-validation"  ng-model="reason.text"  col="40" required ></textarea>
@@ -47,14 +47,14 @@
           <div class="modal-content">
             <div class="modal-header">
               <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-              <h4 class="modal-title" id="myModalLabel">Select Delivery Date</h4>
+              <h4 class="modal-title" id="myModalLabel"> Select Delivery Date</h4>
             </div>
             <div class="modal-body">
             <div class="row" style="padding:10px; padding-left:20px;">
               <input type="radio" ng-model="deliveryOption" value="pref" > Accept Preferred Delivery Date - {{ getOrderDate(order.preferred_delivery_date )   }}
             </div> 
              <div class="row" style="padding:10px; padding-left:20px;">
-               <input type="radio" ng-model="deliveryOption" value="custom" >Select New Delivery Date
+               <input type="radio" ng-model="deliveryOption" value="custom" > Select New Delivery Date
             </div> 
 
 
