--- a/src/app/assets/css/oz.css
+++ b/src/app/assets/css/oz.css
@@ -306,7 +306,7 @@ text-overflow: ellipsis;
 }
 .radius5{border-radius: 5px;}
 .text-center{padding:5px;} 
-.tabPolicyLi{width: 16%; word-wrap:breakword;}
+/*.tabPolicyLi{width: 16%; word-wrap:breakword;}*/
 .width25{width:25%;}
 .width50{width:50%;}
 .oz-BackButton{padding: 10px;
