--- a/src/app/OrderZapp/oz/views/oz.orderProcess.tpl.html
+++ b/src/app/OrderZapp/oz/views/oz.orderProcess.tpl.html
@@ -34,9 +34,28 @@
                            <td ng-bind = 'list.order_status'></td>
                            <td ng-bind = 'list.require'></td>
                            <td>
-                               <button class = 'btn-sm btn-warning' ng-click = 'removeOrderProcess(list.index)'> Delete </button>
+                               <button class = 'btn-sm btn-warning' ng-click = 'assignOrderProcessConfigid(list.index)' data-target = '#removeOrderProcessConfiguration' data-toggle = 'modal'> Delete </button>
                            </td>
                        </tr>
 		    </table>
 		</div>
 </div>
+
+<div id = "removeOrderProcessConfiguration" class="modal fade" style="">     
+            <div class="modal-dialog">
+                <div class="modal-content">
+                  <div>
+                    <h4 align="center">Delete Product Configuration</h4>   
+                    <hr>           
+                  </div>  
+              
+                  <div class="modalAppearance">
+                          &nbsp;&nbsp;&nbsp;&nbsp;Are you sure you want to delete this configuration
+                  </div>                                                                                                 
+                  <div class="modal-footer">
+                     <button class="btn btn-info" style="background-color:#ACB2B4;border-color:#ACB2B4;" data-dismiss="modal">Cancel</button>     
+                     <button type="button" class="btn btn-info" id="final" data-dismiss="modal" ng-click = 'removeOrderProcess()'><b>Delete</b></button>   
+                  </div>                                       
+                 </div>
+              </div>
+</div> 
