--- a/src/app/OrderZapp/oz/views/oz.ozWall.ozManageProductConfiguration.tpl.html
+++ b/src/app/OrderZapp/oz/views/oz.ozWall.ozManageProductConfiguration.tpl.html
@@ -64,8 +64,8 @@
 
 <br>
 
-<div ng-repeat = 'list in allConfigContent' style= 'border: 3px solid #ccc;margin-bottom : 15px;'>
-    <div><h4><span ng-bind = 'list.categoryname'></span></h4></div>
+<div ng-repeat = 'list in allConfigContent' style= 'border: 3px solid #ccc;margin-bottom : 15px;' ng-if = 'list.configuration.length !== 0'>
+    <div><h4><span ng-bind = 'list.categoryname' ng-if = 'list.configuration.length !== 0'></span></h4></div>
               
         
         <!--             <tr>
@@ -73,7 +73,7 @@
                             <td ng-bind = 'list.categoryname' style = 'width : 50%' ng-hide = 'list.editing'></td>
                              <td style = 'width : 50%' ng-bind = 'list.categoryname' ng-show = 'list.editing'></td>
                     </tr> -->
-                <table class = 'table table-hover'   style = 'margin-bottom:10px;border: 2px solid #ccc;'>
+                <table class = 'table table-hover'   style = 'margin-bottom:10px;border: 2px solid #ccc;'ng-if = 'list.configuration.length !== 0' >
                     <tr>
                          <td style = 'width : 10%'> <h5>Configuration Type : </h5></td>
                          <td style = 'width : 20%'> <h5>Configuration Name : </h5></td>
@@ -101,7 +101,7 @@
                            <td ng-bind = 'content.description' ng-hide = 'list.editing'></td>
                            <td ng-show = 'list.editing' ><textarea type = 'text' class="form-control" ng-model = 'content.description' ng-show = 'list.editing'></textarea></td>
 
-                           <td ng-hide = 'list.editing' ng-click = 'clearThisCategory($index, list.categoryid)'> <button class = 'glyphicon glyphicon-remove-sign' style = 'height : 40px; width : 40px; border-radius : 5px; '></button></td>
+                           <td ng-hide = 'list.editing' ng-click = 'assignCategoryDeleteCriteria($index, list.categoryid)' data-target = '#clearProductConfigurationList' data-toggle = 'modal'> <button class = 'glyphicon glyphicon-remove-sign' style = 'height : 40px; width : 100px; border-radius : 5px; '>&nbsp;Delete</button></td>
                     </tr>
                 </table>
 
@@ -118,3 +118,22 @@
                 <div ng-show = 'list.editing'><div></div><div><button class = 'btn-info' ng-click = 'cancel(list)'>Cancel</button><button class = 'btn-info' ng-click = 'changeCriteriaContent(list)'>Save</button></div></div>
 
 </div>
+
+<div id = "clearProductConfigurationList" class="modal fade" style="">     
+            <div class="modal-dialog">
+                <div class="modal-content">
+                  <div>
+                    <h4 align="center">Delete Product Configuration</h4>   
+                    <hr>           
+                  </div>  
+              
+                  <div class="modalAppearance">
+                          &nbsp;&nbsp;&nbsp;&nbsp;Are you sure you want to delete this configuration
+                  </div>                                                                                                 
+                  <div class="modal-footer">
+                     <button class="btn btn-info" style="background-color:#ACB2B4;border-color:#ACB2B4;" data-dismiss="modal">Cancel</button>     
+                     <button type="button" class="btn btn-info" id="final" data-dismiss="modal" ng-click = 'clearThisCategory()'><b>Delete</b></button>   
+                  </div>                                       
+                 </div>
+              </div>
+</div> 
