--- a/src/app/OrderZapp/oz/views/oz.seller.participation.agreement.tpl.html
+++ b/src/app/OrderZapp/oz/views/oz.seller.participation.agreement.tpl.html
@@ -15,7 +15,7 @@
         <div ng-bind-html = "templates.sa"></div>
     </div>
     <botton class = 'btn btn-info' ng-click = "updateCurrentTemplate(templates.sa)">Edit</botton>
-      <botton class = 'btn btn-info' ng-click = "updateCurrentTemplateContent('sa')">Save</botton>
+      <botton class = 'btn btn-info' ng-click = "updateCurrentTemplateContent('sa')" ng-if = 'showTextAngular === 1'>Save</botton>
 </div>
 
 <div ng-if = "showTextAngular === 1">
