--- a/src/app/OrderZapp/oz/views/oz.sidebar.search.tpl.html
+++ b/src/app/OrderZapp/oz/views/oz.sidebar.search.tpl.html
@@ -1,28 +1,51 @@
-<div style="min-height:700px;" id="oz-signin-view" class="container">
-    <center><h4>Search </h4></center>
-    <input type = "text" class = "form-control" id="searchText" general-search ng-model="searchText" placeholder = 'Provider Search'/>
-    <div style = "margin-top: 5%;margin-bottom: 0%;" ng-if = 'errors !== ""'> <span ng-bind = "errors" style = "margin-bottom : 10%;"></span> </div>
+<!--
 
-     <br>
+     <div class = "highlighrOrderContainer" >
+        <div oz-clock class="zoomCssControlClock clock " style="margin:2em;" current-value = 'customers' ></div>
+              <div style="margin-left:30%" id = "test"> <h5 > Users</h5></div> 
+         </div> 
 
-     <div ng-repeat = "list in providers" ng-click="getAllBranches(list)" class="cursorPointerHyperlink" style = "margin-bottom : 10%;">
-         <img ng-src = "{{list.providerlogo.image}}" style="height:28px;width:28px;">
-         <span ng-bind = "list.providername"></span>
-         <br>
+
+
+     <div class = "highlighrOrderContainer" >
+        <div oz-clock class="zoomCssControlClock clock" current-value = 'orders' style="margin:2em;" ></div>
+               <div style="margin-left:30%"> <h5 > Orders</h5></div>
      </div>
 
-<!--      <input class = "form-control"  />
-       -->
-      <div class="row">
-        <div class="col-md-12">
-            <p class="input-group">
-              <input type="text" class="form-control" ng-model = "suborderid.content"  placeholder = "Suborder Search" />
-              <span class="input-group-btn">
-                <button type="button" class="btn btn-default" ng-click="getSuborderDetails()"><i class="glyphicon glyphicon-search"></i></button>
-              </span>
-            </p>
+
+  
+</div> -->
+
+<div style="margin:10px auto;" class="search-container-div">
+  <div style="margin:0px;" class="row">
+    <div class="col-md-12">
+      <div style="margin:5px auto;" class="provider-search">
+        <p style="letter-spacing:1px; text-transform:uppercase;font-size:13px; font-weight:bold;" class="text-muted">Search</p>
+        <input type = "text" class = "form-control" id="searchText" general-search ng-model="searchText" placeholder = 'Provider Search'/>
+        <div style = "margin-top: 5%;margin-bottom: 0%;" ng-if = 'errors !== ""'> 
+          <span ng-bind = "errors" style = "margin-bottom : 10%;"></span> 
         </div>
+        <div ng-if="providers.length != 0" ng-repeat = "list in providers" ng-click="getAllBranches(list)" class="cursorPointerHyperlink" style = "margin : 10px auto;">
+          <img ng-src = "{{list.providerlogo.image}}" style="height:28px;width:28px;">
+          <span ng-bind = "list.providername"></span>
+       </div>
+      </div>
+      <br>
+      <div style="margin:5px auto;" class="suborder-search">
+        <div class="input-group">
+          <input type="text" class="form-control" ng-model = "suborderid.content"  placeholder = "Suborder Search" />
+          <span style="padding:0px; background-color:transparent;border:0px;" class="input-group-addon"><button type="button" class="btn btn-default" ng-click="getSuborderDetails()"><i class="glyphicon glyphicon-search"></i></button></span>
+        </div>
+      </div>
+      <br>
+      <div style="margin:5px auto;" class="user-counter">
+        <p style="letter-spacing:1px; text-transform:uppercase;font-size:13px; font-weight:bold; " class="text-muted">User</p>
+        <div oz-clock class="zoomCssControlClock clock " style="width:250%;left:-180px;top:-30px;" current-value = 'customers' ></div>
+      </div>
+      <div style="margin:5px auto;" class="user-counter">
+        <p style="letter-spacing:1px; text-transform:uppercase;font-size:13px; font-weight:bold;" class="text-muted">Order</p>
+        <div oz-clock class="zoomCssControlClock clock" current-value = 'orders' style="width:250%;left:-180px;top:-30px;" ></div>
+      </div>
     </div>
-
-
+  </div>
 </div>
