--- a/src/app/OrderZapp/oz/views/oz.tpl.html
+++ b/src/app/OrderZapp/oz/views/oz.tpl.html
@@ -1,14 +1,16 @@
-<!-- OZ-->
-<div class="container">
-  <div class="row" style ='border-bottom : 1px solid #ccc;'>
-    <div ui-view = "counters"></div>
-  </div>
-  <div class="row" style ='border-bottom : 1px solid #ccc;'>
-    <div class="col-md-3" style ='border-bottom : 1px solid #ccc;'>
-      <div ui-view="search"></div>
+<div class="">
+  <div style="margin:0px;" class="row">
+    <div style="padding:2px;" class="col-md-1"></div>
+    <div style="padding:2px; border: 1px solid #EEE8E8; border-radius: 6px;" class="col-md-10">
+      <div style="margin:0px;" class="row">
+        <div class="col-md-2">
+          <div ui-view="search"></div>
+        </div>
+        <div class="col-md-10">
+          <div ui-view="OrderZappWallView"></div>
+        </div>
+      </div>
     </div>
-    <div class="col-md-9" style ='border-bottom : 1px solid #ccc;'>
-      <div ui-view="OrderZappWallView"></div>
-    </div>
+    <div style="padding:2px" class="col-md-1"></div>
   </div>
 </div>
